Fix overlapping contents, auto-closing hover

--- a/pyconph/home/static/css/styles.css
+++ b/pyconph/home/static/css/styles.css
@@ -1241,3 +1241,13 @@ p {
 .sponsor img {
     max-height: 80px;
 }
+
+.sponsor-section {
+    position: relative;
+    z-index: 2;
+}
+
+.coc-section {
+    position: relative;
+    z-index: 1;
+}
