--- a/pyconph/home/static/css/tooltip.css
+++ b/pyconph/home/static/css/tooltip.css
@@ -11,6 +11,7 @@
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
+  margin-top: 80px;
 
   /* Position the tooltip text - see examples below! */
   position: absolute;
